--- a/css/bootstrap.mod.css
+++ b/css/bootstrap.mod.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 
-#footer{text-align: center;padding: 40px 0;background-color: #7E7E7E;}
+#footer{text-align: center;padding: 40px 0;background-color: #f5f5f5;}
 .img-responsive-center{margin: 0 auto;}
 .copy{margin-top: 20px;}
 .copy span{color: #333;}
 .notfound span{font-size: 80pt;}
+
