--- a/css/bootstrap.mod.css
+++ b/css/bootstrap.mod.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+html{position: relative;min-height: 100%;}
+body{margin-bottom: 60px;}
 #footer{position: absolute;bottom: 0;width: 100%;height: 40px;background-color: #f5f5f5;}
 .img-responsive-center{margin: 0 auto;}
 .copy{margin-top: 10px;}
