--- a/css/bootstrap.mod.css
+++ b/css/bootstrap.mod.css
@@ -7,4 +7,4 @@ body{margin-bottom: 60px;}
 .copy{margin-top: 10px;}
 .copy span{color: #333;}
 .notfound span{font-size: 80pt;}
-
+.error span{margin: .67em 0;font-size: 18pt;}
