--- a/css/bootstrap.mod.css
+++ b/css/bootstrap.mod.css
@@ -10,3 +10,4 @@ body{margin-bottom: 60px;}
 .error span{margin: .67em 0;font-size: 18pt;}
 .twitter-timeline {min-width: 290px!important;max-width: 290px!important;}
 .circle{float: left;border-radius: 50%;}
+midashi{border-left:solid 10px #27D9BA;padding:5;margin-bottom:10;width:90%;font-size: 40pt;}
