--- a/css/bootstrap.mod.css
+++ b/css/bootstrap.mod.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-html{position: relative;min-height: 100%;font-family: sans-serif;}
+@font-face {
+    font-family: 'Koruri Regular';
+    src: url('../fonts/Koruri-Regular-sub.eot');
+    src: url('../fonts/Koruri-Regular-sub.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Koruri-Regular-sub.woff') format('woff'),
+    url('../fonts/Koruri-Regular-sub.ttf') format('truetype');
+}
+html{position: relative;min-height: 100%;font-family: 'Koruri Regular';}
 body{margin-bottom: 60px;}
 #footer{position: absolute;bottom: 0;width: 100%;height: 40px;background-color: #f5f5f5;}
 .img-responsive-center{margin: 0 auto;}
